--- a/src/app/components/services/services.component.scss
+++ b/src/app/components/services/services.component.scss
@@ -31,7 +31,7 @@
     display: flex;
     gap: 12px;
     list-style: none;
-    padding: 0 40px;
+    padding: 4px 40px;
     margin: 0 auto;
     max-width: 900px;
     overflow-x: auto;
