--- a/src/app/components/user-settings/user-settings.component.scss
+++ b/src/app/components/user-settings/user-settings.component.scss
@@ -63,7 +63,7 @@
     display: flex;
     gap: 12px;
     list-style: none;
-    padding: 0 40px;
+    padding: 4px 40px;
     /* Aligns with content padding */
     margin: 0 auto;
     max-width: 900px;
